<resources>
    <string name="app_name">QuanLyLoHang</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <string name="tong_chi">Tổng chi:</string>
    <string name="tong_ung">Tổng ứng:</string>
    <string name="so_du">Số dư:</string>
    <string name="so_file">Số file:</string>
    <string name="hoan_tat">Hoàn tất</string>
</resources>
